Used flexbox instead of floats.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
   <title>South Atlanta Auto Sales</title>
 </head>
 
-<body>
+<body>``
   <div id="wrapper">
+
     <header>
-      <img src="img\banner.jpg" alt="banner">
-      <nav id="main-nav">
+      <div class="flex-banner">
+        <img src="img\banner.jpg" alt="banner">
+      </div>
+      <address>
+        <h3>191 Greenville Street</h3>
+        <h3>Newnan, GA 30263</h3>
+        <h3>(678) 416-0046</h3>
+      </address>
+      <nav id="main-nav" class="flex-nav">
         <a href="#">Inventory</a>
         <a href="#">Financing</a>
         <a href="#">F.A.Q.</a>
       </nav>
     </header>
-    <div id="inventory">
+    <div id="inventory" class="flex-inv">
       <ul>
         <a href="#"><img src="img\2017-cadillac-xts.jpg"></a>
         <a href="#"><img src="img\2006-ford-f150-g-lariat.jpg"></a>
